<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Podcasts</string>

    <!-- Common start -->
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="action_cannot_be_undone">This action cannot be undone</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_connection">Check your internet connection and try again</string>
    <string name="loading_error">An error occurred while loading</string>
    <string name="try_again">Try again</string>
    <string name="loading">Loading</string>
    <string name="more">More</string>

    <string name="description_back">Go back</string>
    <string name="description_explicit_content">Explicit content</string>
    <string name="description_scroll_to_top">Scroll to top</string>
    <string name="description_cover">Podcast cover</string>
    <string name="description_episode_cover">Episode cover</string>
    <!-- Common end -->


    <!-- Player start -->
    <string name="player_skip_hint_format_s" translatable="false">0:%02d</string>
    <string name="player_skip_hint_format_m_s" translatable="false">%d:%02d</string>
    <string name="player_time_stamp_current_format_m_s" translatable="false">%d:%02d</string>
    <string name="player_time_stamp_current_format_h_m_s" translatable="false">%d:%02d:%02d</string>
    <string name="player_time_stamp_left_format_m_s" translatable="false">-%d:%02d</string>
    <string name="player_time_stamp_left_format_h_m_s" translatable="false">-%d:%02d:%02d</string>

    <string name="player_error">An error has occurred in the Podcasts app player. The player is closed.</string>
    <string name="player_sleep_timer">Timer</string>

    <string name="player_description_play_pause">Play and pause</string>
    <string name="player_description_backward">Back 10 seconds</string>
    <string name="player_description_forward">Forward 30 seconds</string>
    <string name="player_description_playback_speed">Change playback speed</string>
    <string name="player_description_options">Player options</string>
    <!-- Player end -->


    <!-- Bottom navigation start -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_explore">Explore</string>
    <string name="bottom_nav_activity">Activity</string>
    <!-- Bottom navigation end -->


    <!-- HomeFragment start -->
    <string name="home_title">Subscriptions</string>
    <string name="home_empty">Your subscriptions will appear here &#128035;</string>
    <!-- HomeFragment end -->


    <!-- ExploreFragment start -->
    <!-- Do not forget to update ExploreTabGenre enum class, if you edit this array. -->
    <string-array name="explore_tabs">
        <item>Main</item>
        <item>News</item>
        <item>Society &amp; Culture</item>
        <item>Education</item>
        <item>Science</item>
        <item>Technology</item>
        <item>Business</item>
        <item>History</item>
        <item>Arts</item>
        <item>Sports</item>
        <item>Health &amp; Fitness</item>
    </string-array>
    <string name="explore_search">Search for podcasts</string>
    <string name="explore_podcasts_updated">Podcasts have been updated</string>
    <!-- ExploreFragment end -->


    <!-- ActivityFragment start -->
    <string-array name="activity_tabs">
        <item>Bookmarks</item>
        <item>In progress</item>
        <item>History</item>
    </string-array>
    <!-- ActivityFragment end -->


    <!-- ActivityBookmarksFragment start -->
    <string name="activity_bookmarks_empty">Bookmark an episode and it will appear here &#128221;</string>
    <!-- ActivityBookmarksFragment end -->


    <!-- ActivityInProgress start -->
    <string name="activity_in_progress_empty">Episodes in progress will appear here &#9203;</string>
    <!-- ActivityInProgress end -->


    <!-- ActivityHistoryFragment start -->
    <string name="activity_history_completed">Completed</string>
    <string name="activity_history_empty">Completed episodes will appear here &#128035;</string>
    <!-- ActivityHistoryFragment end -->


    <!-- PodcastFragment start -->
    <string name="podcast_add_to_bookmarks_description">Add the episode to the bookmarks</string>
    <string name="podcast_remove_from_bookmarks_description">Remove the episode from the bookmarks</string>
    <string name="podcast_show_completed">Completed</string>
    <string name="podcast_description_sort_order">Episodes sorting</string>
    <string name="podcast_episode_completed">Completed</string>
    <string name="podcast_episode_playing">Playing</string>
    <string name="podcast_episode_buffering">Loading</string>
    <plurals name="podcast_episode_count">
        <item quantity="zero">%d Episodes</item>
        <item quantity="one">%d Episode</item>
        <item quantity="two">%d Episodes</item>
        <item quantity="few">%d Episodes</item>
        <item quantity="many">%d Episodes</item>
        <item quantity="other">%d Episodes</item>
    </plurals>

    <string name="podcast_episode_pub_just_now">Just now</string>
    <plurals name="podcast_episode_pub_hours_ago">
        <item quantity="zero">%d hours ago</item>
        <item quantity="one">%d hour ago</item>
        <item quantity="two">%d hours ago</item>
        <item quantity="few">%d hours ago</item>
        <item quantity="many">%d hours ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="podcast_episode_pub_days_ago">
        <item quantity="zero">%d days ago</item>
        <item quantity="one">%d day ago</item>
        <item quantity="two">%d days ago</item>
        <item quantity="few">%d days ago</item>
        <item quantity="many">%d days ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <string name="podcast_episode_duration_m">%1$d min</string>
    <string name="podcast_episode_duration_h">%1$d hr</string>
    <string name="podcast_episode_duration_h_m">%1$d hr %2$d min</string>

    <string name="podcast_episode_time_left_almost_over">Almost over</string>
    <string name="podcast_episode_time_left_m">%d min left</string>
    <string name="podcast_episode_time_left_h">%d h left</string>
    <string name="podcast_episode_time_left_h_m">%d h %d min left</string>
    <!-- PodcastFragment end -->


    <!-- EpisodeFragment start -->
    <string name="episode_add_to_bookmarks_description">Add the episode to the bookmarks</string>
    <string name="episode_remove_from_bookmarks_description">Remove the episode from the bookmarks</string>
    <string name="episode_no_such_episode">There is no such episode in the database</string>
    <string name="episode_go_back">Go back</string>
    <string name="episode_options">Options</string>
    <!-- EpisodeFragment end -->


    <!-- SearchFragment start -->
    <string name="search_transition_name" translatable="false">searchButton</string>
    <string name="search_podcasts">Search for podcasts</string>
    <string name="search_no_results_found">Nothing found &#128533;</string>

    <string name="search_image_description">Nothing found</string>
    <string name="search_clear_search_field_description">Clear search field</string>
    <!-- SearchFragment end -->


    <!-- SettingsFragment start -->
    <string name="settings_title">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_show_subscription_titles">Show subscription titles</string>
    <string name="settings_developer_options">Developer options</string>
    <string name="settings_delete_episodes">Delete all episodes</string>
    <string name="settings_delete_podcasts_and_episodes">Delete all podcasts and episodes</string>
    <!-- SettingsFragment end -->


    <!-- UnsubscribeDialog start -->
    <string name="unsubscribe_unsubscribe">Unsubscribe</string>
    <!-- UnsubscribeDialog end -->


    <!-- PlayerOptionsDialog start -->
    <string name="player_options_mark_completed">Mark completed</string>
    <!-- PlayerOptionsDialog end -->


    <!-- SleepTimerDialog start -->
    <string name="sleep_timer_title">Sleep timer</string>
    <string name="sleep_timer_clear">Clear</string>
    <string name="sleep_timer_set">Set</string>
    <!-- SleepTimerDialog end -->


    <!-- EpisodeOptionsDialog start -->
    <string name="episode_options_mark_completed">Mark completed</string>
    <string name="episode_options_mark_uncompleted">Mark uncompleted</string>
    <!-- EpisodeOptionsDialog end -->


    <!-- Notification start. -->
    <string name="notification_player_channel_name">Player</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_backward">Backward for 10 seconds</string>
    <string name="notification_forward">Forward for 30 seconds</string>
    <!-- Notification end. -->

</resources>