<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionGroup="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ripple_list_item_background"
                android:orientation="horizontal"
                android:paddingEnd="16dp">

                <ImageView
                    android:id="@+id/theme_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:src="@drawable/ic_light_mode_outline_24"
                    app:tint="?attr/colorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@string/settings_theme"
                    android:textColor="?attr/colorOnSurfaceMedium"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/theme_current"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:text="@string/settings_theme_system"
                    android:textColor="?attr/colorOnSurfaceLow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/show_subscription_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_list_item_background"
                android:orientation="horizontal"
                android:paddingEnd="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:src="@drawable/ic_text_fields_24"
                    app:tint="?attr/colorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@string/settings_show_subscription_titles"
                    android:textColor="?attr/colorOnSurfaceMedium"
                    android:textSize="16sp" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/show_subscription_titles_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minWidth="0dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="16dp"
                android:text="@string/settings_developer_options"
                android:textColor="?attr/colorOnSurfaceLow" />

            <LinearLayout
                android:id="@+id/delete_episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_list_item_background"
                android:orientation="horizontal"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:src="@drawable/ic_clear_24"
                    app:tint="@color/red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:text="@string/settings_delete_episodes"
                    android:textColor="?attr/colorOnSurfaceMedium"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/delete_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_list_item_background"
                android:orientation="horizontal"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:src="@drawable/ic_clear_24"
                    app:tint="@color/red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:text="@string/settings_delete_podcasts_and_episodes"
                    android:textColor="?attr/colorOnSurfaceMedium"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height_with_divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:orientation="horizontal"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <ImageButton
                android:id="@+id/app_bar_back"
                style="@style/AppBarLayout.Back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@id/app_bar_title"
                style="@style/AppBarLayout.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/settings_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/app_bar_back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/app_bar_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOnSurfaceUtil"
            android:visibility="gone" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>