<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <View
        android:id="@+id/pill"
        android:layout_width="@dimen/bottom_sheet_pill_width"
        android:layout_height="@dimen/bottom_sheet_pill_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_bottom_sheet_pill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sleep_timer_title"
        android:textColor="?attr/colorOnSurfaceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pill" />

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        style="@style/OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:text="@string/sleep_timer_clear"
        android:textColor="?attr/colorOnSurfaceMedium"
        app:cornerRadius="48dp"
        app:icon="@drawable/ic_clear_24"
        app:iconTint="@color/red"
        app:layout_constraintEnd_toStartOf="@id/set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_picker"
        app:rippleColor="?attr/colorOnSurfaceUtil" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set"
        style="@style/OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:text="@string/sleep_timer_set"
        android:textColor="?attr/colorOnSurfaceMedium"
        app:cornerRadius="48dp"
        app:icon="@drawable/ic_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/clear"
        app:layout_constraintTop_toTopOf="@id/clear"
        app:rippleColor="?attr/colorOnSurfaceUtil" />

</androidx.constraintlayout.widget.ConstraintLayout>