<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="?attr/colorSearchButtonTint"
        android:transitionName="@string/search_transition_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/app_bar_back"
            style="@style/ImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/description_back"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurfaceLow" />

        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:hint="@string/search_podcasts"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="?attr/colorOnSurfaceMedium"
            android:textColorHighlight="?attr/colorOnSurfaceUtil"
            android:textColorHint="?attr/colorOnSurfaceHint"
            android:textCursorDrawable="@drawable/shape_cursor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_clear"
            app:layout_constraintStart_toEndOf="@+id/app_bar_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/search_clear"
            style="@style/ImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/search_clear_search_field_description"
            android:padding="16dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_clear_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurfaceHint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_divider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        tools:itemCount="5"
        tools:listitem="@layout/item_search_podcast" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:trackColor="?attr/colorSurface" />

    <include
        android:id="@+id/error"
        layout="@layout/screen_error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <include
        android:id="@+id/nothing_found"
        layout="@layout/screen_nothing_found"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>