<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ripple_background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/description_cover"
            tools:srcCompat="@drawable/tools_podcast_cover_1400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/colorOnSurfaceHigh"
                android:textSize="18sp"
                tools:text="Чтение" />

            <TextView
                android:id="@+id/publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/colorOnSurfaceLow"
                tools:text="Радио Маяк" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="?attr/colorOnSurfaceLow"
            tools:text="Евгений Стаховский читает рассказы и повести известных и не очень известных авторов." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@drawable/shape_trailing_gradient"
            android:paddingStart="32dp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subscribe"
            style="@style/ToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_add_24"
            tools:text="@string/subscribe" />

        <ImageView
            android:id="@+id/explicit_content"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/description_explicit_content"
            app:srcCompat="@drawable/ic_explicit_outline_24"
            app:tint="@color/orange" />

    </LinearLayout>

</LinearLayout>